--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -69,6 +69,15 @@ button {
     background-color: #c9302c;
 }
 
+.changePage {
+    background-color: #2c2b2b;
+    color: white;
+}
+
+.changePage:hover {
+    background-color: #0c0000;
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -115,4 +124,12 @@ table tr:nth-child(even) {
 
 table tr:hover {
     background-color: #ddd;
+}
+
+#pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
 }
